---
config:
  theme: neo-dark
  look: neo
  layout: dagre
  class:
    hideEmptyMembersBox: true
---
classDiagram
direction TB
    class FastExpression {
        +Tree tree
        +Set~String~ used_operators
        +Set~String~ used_datafields
        +Enum type
        +String fingerprint
        +String structure_fingerprint
    }

    class FastExpressionManagerABC {
        <<Abstract>>
	    +parse(expression, type) FastExpression
    }

    class FastExpressionManager {
	    +parse(expression, type) FastExpression
    }

    FastExpression <.. FastExpressionManagerABC
    FastExpressionManagerABC <|.. FastExpressionManager
